data/derived/comb/progs/unify/prog2276.ml.out
Characters 85-97:
  | Sine(e1) -> sin(2* eval(e1,x,y));;
                       ^^^^^^^^^^^^
Error: This expression has type float but an expression was expected of type
         int
